Сделал генераци. хедера, футера, меню, сабменю

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
     <meta name="theme-color" content="#0058ab">
     <title>ИКЕА - не_официальный интернет-магазин мебели - IKEA</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="js/main.js"></script>
+    <script src="js/generateHeader.js" defer></script>
+    <script src="js/generateFooter.js" defer></script>
+    <script src="js/generateCatalog.js" defer></script>
+    <script src="js/generateSubCatalog.js" defer></script>
+    <script src="js/main.js" defer></script>
+
 </head>
 <body>
-<header>
+<!--<header>
     <div class="container">
         <div class="header">
             <button class="btn btn-burger" aria-label="открыть меню">
@@ -52,7 +57,7 @@
             </a>
         </div>
     </div>
-</header>
+</header>-->
 <main>
     <div class="container">
         <h1 class="main-header">ИКЕА. Сила дома.</h1>
@@ -74,7 +79,7 @@
         </aside>
     </div>
 </main>
-<footer>
+<!--<footer>
     <div class="container">
         <div class="footer">
             <div class="footer-catalog">
@@ -111,9 +116,9 @@
         </div>
     </div>
 
-</footer>
+</footer>-->
 
-<div class="catalog">
+<!--<div class="catalog">
     <button type="button" class="btn btn-close catalog-btn" id="hnf-menu-close-btn" aria-expanded="true"
             title="Закрыть меню" aria-label="Закрыть меню">
         <svg focusable="false" class="svg-icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -132,9 +137,9 @@
     </ul>
 
 
-</div>
+</div>-->
 
-<div class="subcatalog">
+<!--<div class="subcatalog">
     <button type="button" class="btn btn-return catalog-btn" aria-expanded="true" title="Закрыть меню"
             aria-label="Закрыть меню">
         <svg focusable="false" class="svg-icon  hnf-svg-icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -157,9 +162,9 @@
         <li class="subcatalog-list__item">
             <a href="goods.html?subcat=Стулья для письменного стола">Стулья для письменного стола</a></li>
     </ul>
-</div>
+</div>-->
 
-<div class="overlay"></div>
+<!--<div class="overlay"></div>-->
 
 
 </body>
