--- a/goods.html
+++ b/goods.html
@@ -20,7 +20,7 @@
 		<h2 class="main-header">Детские игрушки</h2>
 		<div class="goods wrapper">
 			<ul class="goods-list">
-				<li class="goods-list__item">
+				<!--<li class="goods-list__item">
 					<a class="goods-item__link" href="card.html#idd001">
 						<article class="goods-item">
 							<div class="goods-item__img">
@@ -190,7 +190,7 @@
 							<button class="btn btn-add-card" aria-label="Добравить в корзину" data-idd="idd001"></button>
 						</article>
 					</a>
-				</li>
+				</li>-->
 
 			</ul>
 		</div>
