сделана корзина, сделано условие добавления того количества товаров, которое есть в data

--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
 	<div class="container cart-wrapper">
 		<h2 class="cart-header">Корзина</h2>
 		<ul class="cart-list">
-			<li class="cart-item">
+			<!--<li class="cart-item">
 				<div class="product">
 					<div class="product__image-container">
 						<img src="https://secure.ikea.com/ru/ru/images/products/fabler-b-ern-magkaa-igruska__0710165_PE727396_S3.JPG" alt="IKEA ФАБЛЕР БЬЁРН Мягкая игрушка" aria-describedby="aria_product_description_40366083" itemprop="image">
@@ -33,7 +33,7 @@
 						<div class="product__price-type product__price-type-regular">
 							<div>
 								<div class="product__total product__total-regular">99.-</div>
-								<!--    <div class="product__price-regular">99.-</div>  -->
+								&lt;!&ndash;    <div class="product__price-regular">99.-</div>  &ndash;&gt;
 							</div>
 						</div>
 					</div>
@@ -71,7 +71,7 @@
 						<div class="product__price-type product__price-type-regular">
 							<div>
 								<div class="product__total product__total-regular">99.-</div>
-								<!--    <div class="product__price-regular">99.-</div>  -->
+								&lt;!&ndash;    <div class="product__price-regular">99.-</div>  &ndash;&gt;
 							</div>
 						</div>
 					</div>
@@ -109,7 +109,7 @@
 						<div class="product__price-type product__price-type-regular">
 							<div>
 								<div class="product__total product__total-regular">99.-</div>
-								<!--    <div class="product__price-regular">99.-</div>  -->
+								&lt;!&ndash;    <div class="product__price-regular">99.-</div>  &ndash;&gt;
 							</div>
 						</div>
 					</div>
@@ -132,7 +132,7 @@
 						</div>
 					</div>
 				</div>
-			</li>
+			</li>-->
 		</ul>
 		<div class="cart-total">
 			<span class="cart-total-label">Сумма</span>
