--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 
     <script src="js/index.js" defer type="module"></script>
-
+    <script src="js/test.js"></script>
 </head>
 <body>
 <!--<header>
